--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -22,7 +22,7 @@
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
             </div>
         </div>
-        <div id="expenses_list" class="dblclick">{{ expenses }}</div>
+        <div id="expenses_list">{{ expenses }}</div>
     </div>
 
     <div class="col-lg-4">
@@ -34,7 +34,7 @@
         </div>
 
         <div class="row">
-            <div id="ajax-content-categories" class="col-lg-12 pl-0 dblclick">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col-lg-12 pl-0">{{ categories }}</div>
         </div>
     </div>
 </div>
