--- a/project/plans/templates/plans/includes/generic_list.html
+++ b/project/plans/templates/plans/includes/generic_list.html
@@ -22,7 +22,7 @@
         {% for item in items %}
         {% if url_update %}{% url url_update item.id as url %}{% else %}{% define '' as url %}{% endif %}
         {% with item|get_obj_attr:type as name %}
-        <tr data-url="{{ url }}" {% if name == 'Likutis' %}class="bg-warning"{% endif %}>
+        <tr data-url="{{ url }}" class="dblclick{% if name == 'Likutis' %} bg-warning{% endif %}">
             <td class="text-left">{{ name }}{% if item.expense_type.necessary or item.saving_type or 'Būtin' in name or item.title %} <i class="far fa-star star"></i>{% endif %}</td>
             {% cell item.january %}
             {% cell item.february %}
