--- a/project/plans/templates/plans/index.html
+++ b/project/plans/templates/plans/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="incomes_list" class="col-lg-12 dblclick">{{ incomes_list }}</div>
+            <div id="incomes_list" class="col-lg-12">{{ incomes_list }}</div>
         </div>
 
         <!-- expenses plans -->
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="expenses_list" class="col-lg-12 dblclick">{{ expenses_list }}</div>
+            <div id="expenses_list" class="col-lg-12">{{ expenses_list }}</div>
         </div>
 
         <!-- necessary expenses plans -->
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="necessary_list" class="col-lg-12 dblclick">{{ necessary_list }}</div>
+            <div id="necessary_list" class="col-lg-12">{{ necessary_list }}</div>
         </div>
 
         <!-- savings plans -->
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="savings_list" class="col-lg-12 dblclick">{{ savings_list }}</div>
+            <div id="savings_list" class="col-lg-12">{{ savings_list }}</div>
         </div>
 
         <!-- day plans -->
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="day_list" class="col-lg-12 dblclick">{{ day_list }}</div>
+            <div id="day_list" class="col-lg-12">{{ day_list }}</div>
         </div>
 
         <!-- stats plans -->
@@ -81,7 +81,7 @@
             <div class="col-lg-2 text-right"></div>
         </div>
         <div class="row mt-2">
-            <div id="plans_stats" class="col-lg-12 dblclick">{{ plans_stats }}</div>
+            <div id="plans_stats" class="col-lg-12">{{ plans_stats }}</div>
         </div>
     </div>
 </div>
