--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="transactions_list" class="col-lg-12 dblclick">{{ transactions }}</div>
+            <div id="transactions_list" class="col-lg-12">{{ transactions }}</div>
         </div>
 
         <!-- close savings -->
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="savings_close_list" class="col-lg-12 dblclick">{{ savings_close }}</div>
+            <div id="savings_close_list" class="col-lg-12">{{ savings_close }}</div>
         </div>
 
         <!-- change savings -->
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="savings_change_list" class="col-lg-12 dblclick">{{ savings_change }}</div>
+            <div id="savings_change_list" class="col-lg-12">{{ savings_change }}</div>
         </div>
     </div>
 
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="ajax-content-categories" class="col-lg-12 pl-0 dblclick">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col-lg-12 pl-0">{{ categories }}</div>
         </div>
     </div>
 </div>
