--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="ajax-content" class="col-lg-12 dblclick">{% include 'books/includes/books_list.html' %}</div>
+            <div id="ajax-content" class="col-lg-12">{% include 'books/includes/books_list.html' %}</div>
         </div>
     </div>
 </div>
