--- a/project/incomes/templates/incomes/includes/incomes_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_list.html
@@ -14,7 +14,7 @@
         {% url 'incomes:incomes_update' item.id as url_update %}
         {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="5" class="row-spacer"></td>{% endif %}</tr>
         {% endifchanged %}
-        <tr data-url="{{ url_update }}">
+        <tr data-url="{{ url_update }}" class="dblclick">
             <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-left">{{ item.income_type }}</td>
             <td class="text-left">{{ item.account }}</td>
