--- a/project/incomes/templates/incomes/includes/incomes_type_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_type_list.html
@@ -2,6 +2,6 @@
     <div class="list-group-item list-group-item-action list-group-item-primary">Pajamų rūšys</div>
     {% for item in items %}
     {% url 'incomes:incomes_type_update' item.id as url_update %}
-    <div class="list-group-item list-group-item-action" data-url="{{ url_update }}">{{ item.title }}</div>
+    <div class="list-group-item list-group-item-action dblclick" data-url="{{ url_update }}">{{ item.title }}</div>
     {% endfor %}
 </div>
