--- a/project/pensions/templates/pensions/index.html
+++ b/project/pensions/templates/pensions/index.html
@@ -15,7 +15,7 @@
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_pensions }}"><i class="fas fa-plus"></i> Pajamas</button>
             </div>
         </div>
-        <div id="pension-content" class="dblclick">{{ data }}</div>
+        <div id="pension-content">{{ data }}</div>
     </div>
     <div class="col-lg-4">
         <div class="row my-2">
@@ -25,7 +25,7 @@
         </div>
 
         <div class="row">
-            <div id="pension-categories" class="col-lg-12 pl-0 dblclick">{{ categories }}</div>
+            <div id="pension-categories" class="col-lg-12 pl-0">{{ categories }}</div>
         </div>
     </div>
 </div>
