--- a/project/savings/templates/savings/includes/savings_type_list.html
+++ b/project/savings/templates/savings/includes/savings_type_list.html
@@ -2,6 +2,6 @@
     <div class="list-group-item list-group-item-action list-group-item-primary">Fondai</div>
     {% for item in items %}
     {% url 'savings:savings_type_update' item.id as url_update %}
-    <div class="list-group-item list-group-item-action" data-url="{{ url_update }}">{% if item.closed %}<strike>{{ item.title }}</strike> <i>uždaryta {{ item.closed|safe }}</i>{% else %}{{ item.title }}{% endif %}</div>
+    <div class="list-group-item list-group-item-action dblclick" data-url="{{ url_update }}">{% if item.closed %}<strike>{{ item.title }}</strike> <i>uždaryta {{ item.closed|safe }}</i>{% else %}{{ item.title }}{% endif %}</div>
     {% endfor %}
 </div>
