--- a/project/savings/templates/savings/index.html
+++ b/project/savings/templates/savings/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="ajax-content" class="col-lg-12 dblclick">{{ savings }}</div>
+            <div id="ajax-content" class="col-lg-12">{{ savings }}</div>
         </div><!-- End Funds -->
 
         <!-- Pensions -->
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="pension-content" class="col-lg-12 dblclick">{{ pension }}</div>
+            <div id="pension-content" class="col-lg-12">{{ pension }}</div>
         </div><!-- End Pensions -->
     </div>
 
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="ajax-content-categories" class="col-lg-12 pl-0 dblclick">{{ categories }}</div>
+            <div id="ajax-content-categories" class="col-lg-12 pl-0">{{ categories }}</div>
         </div>
         <!-- End Funds Types -->
 
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="pension-categories" class="col-lg-12 pl-0 dblclick">{{ pension_type }}</div>
+            <div id="pension-categories" class="col-lg-12 pl-0">{{ pension_type }}</div>
         </div>
         <!-- End Pension Types -->
     </div>
