--- a/project/bookkeeping/templates/bookkeeping/includes/month_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/month_table.html
@@ -16,17 +16,19 @@
         {% for row, sp in expenses %}
         {% with row.date|date:'w'|weekend:'_weekend_col' as weekend_col %}
         {% with row.date|date:'w'|weekend:'_weekend_row' as weekend_row %}
-        <tr class="{% if day|slugify == row.date|date:'j' %}_current_day{% endif %} {{ weekend_row }}">{% endwith %}
-            <td class="text-left {{ weekend_col }}">{{ row.date|date:'d' }}</td>
+        {% with row.date|date:'d' as day_int %}
+        <tr id='row-{{ day_int }}' class="{% if day|slugify == row.date|date:'j' %}_current_day{% endif %} {{ weekend_row }}">
+            <td class="text-left {{ weekend_col }} panel-heading">
+                <a class="row_click" data-toggle="collapse" aria-expanded="true" data-url="{% url 'bookkeeping:month_day_list' row.date|date:"Ymd" %}" data-id="{{ day_int }}">{{ day_int }}</a>
+            </td>
             {% for cat in expense_types %}
             {% cell row|get_item:cat css_class=weekend_col %}
             {% endfor %}
             {% cell row.total css_class=weekend_col|add:' bl'|add:' no-right-border' %}
-
             <td class="empty"></td>
             <td class="text-left {{ weekend_col }} no-left-border">{{ sp.date|date:'l' }}</td>
             {% cell sp.day css_class=sp.day|negative %}{% cell sp.full css_class=sp.full|negative|add:' -full' %}
-        </tr>{% endwith %}
+        </tr>{% endwith %}{% endwith %}{% endwith %}
         {% endfor %}
     </tbody>
     <tfoot>
@@ -63,5 +65,18 @@
 
     .stats .no-right-border {
         border-right: 0!important;
+    }
+
+    .panel-heading  a:before {
+        font-family: 'Glyphicons Halflings';
+        content: "\e114";
+        float: right;
+        transition: all 0.5s;
+    }
+
+    .panel-heading.active a:before {
+        -webkit-transform: rotate(180deg);
+        -moz-transform: rotate(180deg);
+        transform: rotate(180deg);
     }
 </style>
