in ajax.js check if url not empty

--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -115,7 +115,7 @@
             var url = btn.data('url');
             var id = btn.data('id');
 
-            if (url == undefined) {
+            if (url == undefined || !url) {
                 return;
             }
 
