--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -29,6 +29,10 @@
                 <div class="row px-3">
                     <div id="tbl_std_av" class="col-lg-12 px-1">{{ tbl_std_av }}</div>
                 </div>
+
+                <div class="row px-3">
+                    <div class="col-lg-12 px-1">{% include 'drinks/includes/chart_consumsion_history.html' %}</div>
+                </div>
             </div>
         </div>
     </div>
