expenses table with edit button

--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -9,6 +9,7 @@
             <th class="text-right">Kaina</th>
             <th width="260rem">Pastaba</th>
             <th class="text-right">Sąskaita</th>
+            <th width="45rem"></th>
         </tr>
     </thead>
     <tbody>
@@ -22,11 +23,12 @@
             <td>{{ item.quantity }}</td>
             <td>{{ item.price|intcomma }}</td>
             <td class="text-left">{{ item.remark|linebreaksbr }}</td>
-            <td {% if item.exception %} style="border-right: 5px solid red!important;"{% endif %}>{{ item.account }}</td>
+            <td>{{ item.account }}</td>
+            <td class="text-center" {%if item.exception %} style="border-right: 5px solid red!important;"{% endif %}><a type="button" data-url="{{ url_update }}" class="btn btn-super-sm btn-outline-info js-create">Edit</a></td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="7" class="py-2"><b>{{ request.user.year|title }}</b> metais išlaidų nėra.</td>
+            <td colspan="8" class="py-2"><b>{{ request.user.year|title }}</b> metais išlaidų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
