--- a/project/drinks/templates/drinks/includes/drinks_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_list.html
@@ -3,20 +3,22 @@
         <tr class="top">
             <th>Data</th>
             <th class="text-right">Kiekis</th>
+            <th width="40rem"></th>
         </tr>
     </thead>
     <tbody>
         {% for item in items %}
         {% url 'drinks:drinks_update' item.id as url_update %}
-        {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="2" class="row-spacer"></td>{% endif %}</tr>
+        {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="3" class="row-spacer"></td>{% endif %}</tr>
         {% endifchanged %}
         <tr data-url="{{ url_update }}" class="dblclick">
             <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
             <td>{{ item.quantity }}</td>
+            <td class="text-center"><a type="button" data-url="{{ url_update }}" class="btn btn-super-sm btn-outline-info js-create">Edit</a></td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="6" class="py-2"><b>{{ request.user.year|title }}</b> metais įrašų nėra.</td>
+            <td colspan="3" class="py-2"><b>{{ request.user.year|title }}</b> metais įrašų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
