--- a/project/plans/templates/plans/includes/generic_list.html
+++ b/project/plans/templates/plans/includes/generic_list.html
@@ -2,7 +2,7 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th width="12%">Pavadinimas</th>
+            <th width="10%">Pavadinimas</th>
             <th width="7%" class="text-right">Sausis</th>
             <th width="7%" class="text-right">Vasaris</th>
             <th width="7%" class="text-right">Kovas</th>
@@ -15,7 +15,7 @@
             <th width="7%" class="text-right">Spalis</th>
             <th width="7%" class="text-right">Lapkritis</th>
             <th width="7%" class="text-right">Gruodis</th>
-            <th width="4%"></th>
+            <th width="6%"></th>
         </tr>
     </thead>
     <tbody>
@@ -36,7 +36,9 @@
             {% cell item.october %}
             {% cell item.november %}
             {% cell item.december %}
-            <td>{% if url_delete %}
+            <td class="text-center">
+                <a type="button" data-url="{{ url }}" class="btn btn-super-sm btn-outline-info js-create">Edit</a>
+            {% if url_delete %}
                 <button type="button" class="btn btn-super-sm btn-danger js-delete" data-url="{% url url_delete item.id %}">Delete</button>
             {% endif %}</td>
         </tr>{% endwith %}
