--- a/project/expenses/templates/expenses/includes/expenses_type_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_type_list.html
@@ -6,14 +6,16 @@
             <a role="button" class="list-group-item list-group-item-primary list-group-item-action pr-2" data-toggle="collapse" href="#_{{ item.id }}_"
                 aria-expanded="true" >
                 {{ item.title }}
-                {% if item.necessary %}<span class="badge badge-primary"><i class="far fa-star"></i></span>{% endif %}
+                {% if item.necessary %}<span class="badge badge-primary"><i class="far fa-star"></i></span>{% endif %}<span style="position: absolute; top: .25rem; right: 30px; display: block;"><button type="button" data-url="{{ url_type_update }}" class="btn btn-super-sm btn-outline-info js-create">Edit</button></span>
             </a>
         </div>
         <div id="_{{ item.id }}_" class="panel-collapse collapse" role="tabpanel">
             {% for sub in item.expensename_set.all %}
             {% url 'expenses:expenses_name_update' sub.id as url_name_update %}
             <div class="list-group-item list-group-item-action dblclick" data-url="{{ url_name_update }}">{{ sub.title }}
-                {% if sub.valid_for %}<span class="badge badge-secondary">{{ sub.valid_for|safe }}</span>{% endif %}</div>
+                {% if sub.valid_for %}<span class="badge badge-secondary">{{ sub.valid_for|safe }}</span>{% endif %}
+                <span style="position: absolute; top: .25rem; right: 30px; display: block;"><button type="button" data-url="{{ url_name_update }}" class="btn btn-super-sm btn-outline-info js-create">Edit</button>
+            </div>
             {% endfor %}
         </div>
     </div>
