--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -28,8 +28,8 @@
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="8" class="py-2"><b>{{ request.user.year|title }}</b> metais išlaidų nėra.</td>
-        </tr>
+            <td colspan="8" class="py-2"><b>{% if notice %}{{ notice }}{% else %}{{ request.user.year|title }}</b> metais išlaidų nėra.{% endif %}</td>
+        </tr>{
         {% endfor %}
     </tbody>
 </table>
