--- a/project/bookkeeping/templates/bookkeeping/includes/reload_index.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/reload_index.html
@@ -2,3 +2,4 @@
 <div id="money">{{ money }}</div>
 <div id="wealth">{{ wealth }}</div>
 <div id="saving_worth">{{ savings }}</div>
+<div id="accounts_worth">{{ accounts }}</div>
