--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_salary.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_salary.html
@@ -61,21 +61,34 @@
         },
         plotOptions: {
             area: {
-                fillOpacity: 0.5
-            },
-            area: {
                 dataLabels: {
                     enabled: true,
                     format: '{point.y:.0f}',
-                    color: '#77933c'
+                    verticalAlign:'top',
+                    color: '#77933c',
+                    style: {
+                        textOutline: 0,
+                    },
                 },
                 enableMouseTracking: false,
-                fillOpacity: 0.5,
+                fillOpacity: 0.65,
+            },
+            line: {
+                dataLabels: {
+                    enabled: true,
+                    format: '{point.y:.0f}',
+                    y: -5,
+                    color: '#2d5f2e',
+                    style: {
+                        textOutline: 0,
+                    },
+                },
+                enableMouseTracking: false,
             }
         },
         series: [
-            {'name': 'Vidutinis atlyginimas', 'data': {{ salary_data_avg|safe }}, 'type': 'area', 'color': '#77933c'},
-            {'name': 'Vidutinės pajamos', 'data': {{ balance_income_avg|safe }}, 'type': 'line', 'color': '#6994c7'},
+            {'name': 'Vidutinis atlyginimas, €', 'data': {{ salary_data_avg|safe }}, 'type': 'area', 'color': '#98bc62'},
+            {'name': 'Vidutinės pajamos, €', 'data': {{ balance_income_avg|safe }}, 'type': 'line', 'color': '#2d5f2e'},
         ]
     });
 </script>
