disabled y axis title

--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_drinks.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_drinks.html
@@ -46,7 +46,7 @@
                 },
             },
             title: {
-                text: 'ml',
+                text: '',
                 style: {
                     color: '#46ab9d',
                 }
@@ -63,7 +63,7 @@
                 },
             },
             title: {
-                text: 'L',
+                text: '',
                 style: {
                     color: '#d13572',
                 }
