--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_drinks.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_drinks.html
@@ -88,7 +88,7 @@
                 format: '{point.y:.0f}',
                 y: -25,
                 verticalAlign:'top',
-                color: '#46ab9d',
+                color: '#28695f',
                 style: {
                     textOutline: 0,
                 },
