--- a/project/drinks/templates/drinks/includes/chart_consumsion_history.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_history.html
@@ -74,6 +74,6 @@
                 fillOpacity: 0.4
             }
         },
-        series: {{ ser|safe }}
+        series: {{ serries|safe }}
     });
 </script>
