renamed template variable

--- a/project/nights/templates/nights/includes/chart_weekdays.html
+++ b/project/nights/templates/nights/includes/chart_weekdays.html
@@ -11,7 +11,7 @@
         xAxis: {
             lineColor: '#000',
             lineWidth: 2,
-            categories: {{ weekdays|safe }},
+            categories: {{ categories|safe }},
             crosshair: true,
             labels: {
                 style: {
