--- a/project/nights/templates/nights/index.html
+++ b/project/nights/templates/nights/index.html
@@ -17,7 +17,7 @@
 </div>
 <div class="row mt-2">
     <div class="col-lg-6" id="chart_weekdays">{{ chart_weekdays }}</div>
-    <div class="col-lg-6">Per month</div>
+    <div class="col-lg-6" id="chart_months">{{ chart_months }}</div>
 </div>
 
 {% include 'modal.html' %}
