--- a/project/nights/templates/nights/includes/chart_periodicity.html
+++ b/project/nights/templates/nights/includes/chart_periodicity.html
@@ -61,7 +61,8 @@
         series: [{
             name: 'Dažnis',
             data: {{ data|safe }},
-            color: 'rgba(48, 123, 110, 0.5)',
+            color: 'rgba(70, 171, 157, 0.65)',
+            borderColor: 'rgba(70, 171, 157, 1)',
         }]
     });
 });
