--- a/project/nights/templates/nights/includes/chart_periodicity.html
+++ b/project/nights/templates/nights/includes/chart_periodicity.html
@@ -59,10 +59,10 @@
             }
         },
         series: [{
-            name: 'Dažnis',
+            name: 'Kiekis',
             data: {{ data|safe }},
-            color: 'rgba(70, 171, 157, 0.65)',
-            borderColor: 'rgba(70, 171, 157, 1)',
+            color: 'rgba({{ chart_column_color }}, 0.65)',
+            borderColor: 'rgba({{ chart_column_color }}, 1)',
         }]
     });
 });
