--- a/project/nights/templates/nights/includes/chart_periodicity.html
+++ b/project/nights/templates/nights/includes/chart_periodicity.html
@@ -4,6 +4,7 @@
        Highcharts.chart('{{ chart }}_container', {
         chart: {
             type: 'column',
+            height: '300px',
         },
         title: {
             text: '{{ chart_title|safe }}',
