--- a/project/nights/templates/nights/index.html
+++ b/project/nights/templates/nights/index.html
@@ -20,6 +20,8 @@
     <div class="col-lg-6" id="chart_months">{{ chart_months }}</div>
 </div>
 
+<div id="chart_year">{{ chart_year }}</div>
+
 {% include 'modal.html' %}
 
 {% endblock content %}
