--- a/project/nights/templates/nights/index.html
+++ b/project/nights/templates/nights/index.html
@@ -15,6 +15,11 @@
         <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_nights }}"><i class="fas fa-plus"></i> Pridėti</button>
     </div>
 </div>
+
+<div class="row my-3">
+    <div class="col text-center">{{ info_row }}</div>
+</div>
+
 <div class="row mt-2">
     <div class="col-lg-6" id="chart_weekdays">{{ chart_weekdays }}</div>
     <div class="col-lg-6" id="chart_months">{{ chart_months }}</div>
