--- a/project/nights/templates/nights/index.html
+++ b/project/nights/templates/nights/index.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <div class="row mt-2">
-    <div class="col-lg-12" style="background-color: aliceblue;">
+    <div class="col-lg-12">
         {% url 'nights:nights_new' as url_nights %}
         <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_nights }}"><i class="fas fa-plus"></i> Pridėti</button>
     </div>
