--- a/project/nights/templates/nights/includes/chart_month_periodicity.html
+++ b/project/nights/templates/nights/includes/chart_month_periodicity.html
@@ -6,12 +6,11 @@
     <div class="col-lg-4 px-0 mx-0">
         {% include 'nights/includes/chart_month.html' %}
     </div>
-
     {% if forloop.counter|divisibleby:3 %}
     </div> <!-- row end loop -->
     <div class="row mt-3">
     <!-- row start loop -->
     {% endif %}
-
     {% endwith %}
 {% endfor %}
+</div>
